videodecoder: Take DTS as PTS for keyframes as a last resort if we can't calculate any PTS

https://bugzilla.gnome.org/show_bug.cgi?id=704193